# axolotl

./: Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: mod.rs  prelude.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240118_061114_users.rs
src/: api_response.rs  app_state.rs  auth.rs  error_res.rs  main.rs
src/accounts/: login.rs  mod.rs  model.rs  register.rs  req.rs  res.rs  router.rs
