[package]
name = "axolotl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
dotenv = "0.15.0"
serde = { version = "1.0.195", features = ["derive"] }
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
tokio = { version = "1.35.1", features = ["full"] }
entity = { path = "entity" }

[workspace]
members = ["entity"]
