[package]
name = "axolotl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
bcrypt = "0.15.0"
dotenv = "0.15.0"
entity = { path = "entity" }
jsonwebtoken = "9"
migration = {path = "migration"}
serde = { version = "1.0.195", features = ["derive"] }
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
tokio = { version = "1.35.1", features = ["full"] }
regex = "1.10.3"

[workspace]
members = ["entity", "migration"]
